Changed parts of ladder details implementation back to the old way (before login status indicator was added) in hopes of fixing flickering issue in safari. Since new implementation fixed issue where ladder details could overlap login status indicator, now the login status indicator is simply hidden when screen gets too narrow (instead of scaling down ladder details to make it fit).

--- a/static/css/ladder.css
+++ b/static/css/ladder.css
@@ -1,11 +1,17 @@
 .ladder-details {
 	display: flex;
 	justify-content: center;
+	position: absolute;
+	padding: 12px;
+	width: 100%;
+}
+
+.ladder-details__inner {
+	display: flex;
+	justify-content: center;
 	font-family: sans-serif;
 	color: white;
 	width: 100%;
-	height: 0;
-	overflow: visible;
 }
 
 .ladder-details__card {
@@ -14,12 +20,10 @@
 	background: black;
 	padding: 5px 8px;
 	width: fit-content;
-	height: fit-content;
 	text-shadow: 0 2px 2px #000;
 	box-shadow: 0 2px 8px #000;
 	opacity: 0.9;
 	z-index: 3;
-	font-size: min(4vw, 16px);
 }
 
 .ladder-details__card > div {
@@ -90,5 +94,9 @@
 	.ladder-details__card > .timer,
 	.ladder-details__card > .blue {
 		justify-content: center;
+	}
+
+	.header-container .login-status-container.ladder-game-started {
+		visibility: hidden;
 	}
 }
